create images folder

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,9 +17,9 @@
       <a href="#">Team</a> |
       <a href="#">Contact</a>
     </nav>
-    <img src="/image01.jpg" alt="">
-    <img src="/image02.jpg" alt="">
-    <img src="/image03.jpg" alt="">
+    <img src="/images/image01.jpg" alt="">
+    <img src="/images/image02.jpg" alt="">
+    <img src="/images/image03.jpg" alt="">
   </header>
 
   <main>
@@ -35,8 +35,8 @@
     </ol>
     <h2>Our Team</h2>
     <ul>
-      <li><img src="/html 로고.png" alt="">Name 1, Position 1</li>
-      <li><img src="/css 로고.png" alt="">Name 2, Position 2</li>
+      <li><img src="/images/html 로고.png" alt="">Name 1, Position 1</li>
+      <li><img src="/images/css 로고.png" alt="">Name 2, Position 2</li>
     </ul>
   </main>
 
